app/sass/main.sass
// Main SASS file.

// Color palette
@import colors
// Fonts
@import fonts

// Helpful CSS classes
@import helper_classes
// Styles for individual sections
@import sections/header/main
@import sections/projects/main
@import sections/contact
// Top nav bar
@import top_bar


*
  box-sizing: border-box

  &::before,
  &::after
    box-sizing: border-box

  overflow-x: hidden


body
  margin: 0
  font-family: 'Open Sans', sans-serif
  -webkit-font-smoothing: antialiased


h1,
h2,
h3,
h4,
h5,
h6
  font-family: 'PierSans', sans-serif
  font-weight: 700

h1,
h2
  font-size: 5vw

h3,
h4
  font-size: 4vw

h5,
h6
  font-size: 3.5vw

h1,
h5
  text-transform: uppercase


a
  color: $light-text-primary
  text-decoration: none

  &:visited
    color: $light-text-primary

section
  width: 100vw

  overflow: auto

  &.full
    // Account for height of top bar
    height: calc(100vh - 69px)

